# FastAPIServer

./: DockerFile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: main.py
db/: dump.sql
tests/: testCases.py
