[tool.poetry]
name = "fastapi"
version = "0.1.0"
description = "Python FastAPI Server"
authors = ["Ales Nabernik"]

[tool.poetry.dependencies]
python = "3.8"
fastapi = "^0.64.0"
typing = "^3.10.0"
mysqlclient = "1.4.6"
pydantic = "^1.8.1"
requests = "^2.25.1"
jsonschema = "^3.2.0"

[tool.poetry.dev-dependencies]
requests = "^2.25.1"
jsonschema = "^3.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
